--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.11.0",
-    "vite": "^5.4.9"
+    "vite": "^4.5.3",
+    "vite-plugin-node-polyfills": "^0.13.0"
   }
 }
