--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-# Firebase (from your existing setup)
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+# Firebase
+VITE_FIREBASE_API_KEY=AIzaSyAV8x3oA2D3UO5niAmwo88U9Of3hj7VNaQ
+VITE_FIREBASE_AUTH_DOMAIN=bigfoot-esports.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=bigfoot-esports
+VITE_FIREBASE_STORAGE_BUCKET=bigfoot-esports.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=868767435883
+VITE_FIREBASE_APP_ID=1:868767435883:web:f90f8d3d5bfd66e933752e
+VITE_FIREBASE_MEASUREMENT_ID=G-S26ZFJRD3M
 
 # Reddit API
 VITE_REDDIT_CLIENT_ID=your_reddit_app_id
