--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "firebase": "^10.7.1",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "framer-motion": "^11.11.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
