--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.8.0",
     "firebase": "^10.7.1",
     "lucide-react": "^0.263.1",
-    "framer-motion": "^11.11.9"
+    "framer-motion": "^11.11.9",
+    "@solana/web3.js": "^1.95.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
