--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "firebase": "^10.7.1",
     "lucide-react": "^0.263.1",
     "framer-motion": "^11.11.9",
-    "@solana/web3.js": "^1.95.3"
+    "@solana/web3.js": "^1.95.3",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
