--- a/package.json
+++ b/package.json
@@ -19,23 +19,19 @@
     "@solana/web3.js": "^1.95.3",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "qrcode.react": "^3.1.0"
+    "@solana/wallet-adapter-wallets": "^0.19.32"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.13.0",
-    "@eslint/object-schema": "^2.1.4",
-    "@eslint/config-array": "^0.18.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8",
-    "vite-plugin-node-polyfills": "^0.22.0"
+    "vite": "^5.0.8"
   }
 }
