--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@solana/web3.js": "^1.95.3",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32"
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "qrcode.react": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
